Quota: Fix deletion of empty FileSystem and empty WebSql entries

When accessing but not writing to a storage system, an entry is
added to OriginInfoTable in QuotaDatabase. This entry doesn't initialize
last_modified_date, so it is not removed when deleting data for a time
range that is not "All time", which queries for the last time a storage
was modified.

TBR=jsbell
Bug: 859527

Change-Id: I6e8645ea8e69c2fed3e6863d240c530abb2bc0d5
Reviewed-on: https://chromium-review.googlesource.com/1122856
Commit-Queue: Victor Costan <pwnall@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572862}
Former-commit-id: 76a1ee1935b9500b3ac1e5ff26066811c467bfe8